# Langchain-Course

./: .gitignore  README.md  main.py  main1.py  main2.py  pyproject.toml
E-Commerce Agent/: layer1agent.py  layer1agentGemini.py  layer2_ollama_agent_documentation.md  layer2agent.py
SearchAgent/: jobsearch.py  searchagent.py  tavilyprovider.py  tavilypydantic.py  tavilysearch.py
